--- a/help/en/Acknowledgements.html
+++ b/help/en/Acknowledgements.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- $Id: Acknowledgements.html,v 1.2 2007-11-02 05:47:34 jacobsen Exp $ -->
+<!-- $Id: Acknowledgements.html,v 1.3 2007-12-26 17:26:17 jacobsen Exp $ -->
 
 <!-- This page is created from the content (not formatting) -->
 <!-- of http://jmri.sf.net/community/index.html -->
@@ -36,7 +36,8 @@
 	<LI>Debbie Ames of Lenz USA, who has provided valuable information on
 	the Lenz decoders and loaned equipment for testing
 	<LI>Ronald Angel, who figured out how to run the demo on GNU/Linux
-    <LI>Ian Anderson, who set up the <A HREF="http://www.editthis.info/JMRI/index.php/Main_Page">documentation Wiki</a>,
+    <LI>Ian Anderson, who set up the 
+    <A HREF="http://www.editthis.info/JMRI/index.php/Main_Page">documentation Wiki</a>,
     which lets a lot of people easily contribute to building better documentation
 	<LI>Ron W. Auld, who's llnmon program formed the basis for the LocoNet
 	monitoring
@@ -68,12 +69,15 @@
 	and created the connection to the Zimo MX1 DCC system
     <LI>Dan Boudreau, who added support for the new NCE turnout command
     and read-back of turnout positions, updated the "send packet" tool to send 
-    NCE binary messages, and added a tool to let NCE users send macro commands.
+    NCE binary messages, added a tool to let NCE users send macro commands,
+    updated the NCE-USB support, and fixed a lot of details in the NCE support.
 	<LI>Dave Boydston of Serialio.com, who helped with the Windows
 	connection to an MS100.  Check out their great Java serial library!
 	<LI>Peter Brandenburg, for many CT Electronik decoder definitions, definitions for Haber &amp; Koenig decoders, and for creating the SPROG web page
-	<LI>Jerry Britton, who acquired and is maintaining the domain registration 
-	for decoderpro.com, and wrote a scripting example page
+	<LI>Jerry Britton, who acquired and maintained the domain registration 
+	for decoderpro.com, despite Matt Katzer's
+	<a href="/k/UDRP/index.shtml">despicable behavior</a>,
+	and wrote a scripting example page
 	<LI>Dick Bronson, who created the great LocoBuffer-II and worked hard
 	to make sure it worked well with JMRI. He also contributed sets
 	of USS panel icons for PanelPro, worked on the PanelPro logo,
@@ -82,6 +86,7 @@
 	<LI>Bob Byck, who did extensive testing of test release 1.7.3
 	<LI>Allen Byrne, who has systematically made improvements in the syntax and structure of the JMRI code
 <A ID="C"></A>
+    <LI>Bill Carman, who located information on the MRC/Athearn F Unit and Challenger decoders
     <LI>Ken Cameron, who wrote the NCE fast clock support
 	<LI>Barry Chinn, who created the PDF file of our manual
 	<LI>Normal Clymer, who contribed a TCS definition file
@@ -101,8 +106,10 @@
 	did much of the customization work for the fast clock, 
 	created the C/MRI light controls,
 	updated the Route functionality,
+	created Logix,
 	added "two outputs per turnout" support for C/MRI,
 	fixed a bug with complex definition loading
+	and added the Layout editor.
 	<LI>Dave Duchesneau, who provided a decoder definition for the MERG accessory decoder
 	<LI>Michael Dunn, who provided a decoder ddefinition for the MRC 1645 decoder
 <A ID="E"></A>
@@ -244,6 +251,7 @@
 <A ID="V"></A>
 <A ID="W"></A>
 	<LI>Jack Walton, who created the Lenz LE080 decoder definition
+	<LI>Mark Waters, who provided Zimo decoder definitions
 	<LI>Jim Wells, who created our logos
     <LI>Donn Welton, who provided info on configuring a PowerBook for DecoderPro
     <LI>Ken Weygandt, who provided the default values for the SoundTraxx Tsunami decoder definition and 45-degree icons for panels
@@ -254,7 +262,7 @@
 <A ID="Z"></A>
 	<LI>david zuhn, who provided instructions for installing the comm libraries on Linux
     <LI>Christopher Zurek, who improved the LokSound V3.5 decoder definition
-    
+
 </UL>
 
 </body>
