--- a/help/en/html/hardware/NCE.html
+++ b/help/en/html/hardware/NCE.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<!-- $Id: NCE.html,v 1.5 2007-12-27 20:33:52 dan_boudreau Exp $ -->
+<!-- $Id: NCE.html,v 1.6 2007-12-27 22:27:01 dan_boudreau Exp $ -->
 <HTML LANG="en">
 <HEAD>
 <TITLE>JMRI: NCE</TITLE>
@@ -56,7 +56,7 @@ the preference menu for reliable operation.</P>
 <H3>USB Limitations</H3>
 
 <P>The NCE USB doesn't support all of the current JMRI features and
-functions. The some of the restrictions are based on the type of system
+functions. Some of the restrictions are based on the type of system
 the USB is connected to. The USB can't get information from AIUs, so
 they can't be used to get feedback from the layout. The turnout feedback
 mode MONITORING isn't available when using a USB, and the Clock
