--- a/xml/XSLT/CSVindex.html
+++ b/xml/XSLT/CSVindex.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
-<!-- $Id: CSVindex.html,v 1.4 2005-10-18 04:39:49 jacobsen Exp $ -->
+<!-- $Id: CSVindex.html,v 1.5 2008-01-13 18:58:59 jacobsen Exp $ -->
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -20,12 +20,14 @@
 <LI><A HREF="pages/cvsummary.csv">cvsummary.csv</a> CVs present in each decoder
 <LI><A HREF="pages/reservedCVs.csv">reservedCVs.csv</a> NMRA reserved CVs present in each decoder
 </UL>
-<A HREF="../../community/index.html">Many people</a>
-have contributed to this effort, and we thank 
-<A HREF="../../community/index.html">all of them</a>.
+<A HREF="../../help/en/Acknowledgements.shtml">Many people</a>
+have worked on this, and we thank 
+<A HREF="../../help/en/Acknowledgements.shtml">all of them</a>.
+If you find this information useful, we encourage you to 
+<a href="http://jmri.sf.net/donations.shtml">donate to support JMRI</a>.
 
 <HR>
-	<p>Copyright &copy; 1997 - 2005 JMRI Community. 
+	<p>Copyright &copy; 1997 - 2008 JMRI Community. 
 	<P>JMRI, DecoderPro, PanelPro, DispatcherPro and associated logos are our trademarks.
 	<P><A href="/Copyright.html">Additional information on copyright, trademarks and licenses is linked here.</a></p>
 
