--- a/xml/XSLT/index.html
+++ b/xml/XSLT/index.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
-<!-- $Id: index.html,v 1.8 2007-12-03 20:09:47 jacobsen Exp $ -->
+<!-- $Id: index.html,v 1.9 2008-01-13 18:58:59 jacobsen Exp $ -->
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -46,12 +46,14 @@ is available from the JMRI distribution, or our
 <A HREF="http://jmri.cvs.sourceforge.net/jmri/xml/XSLT/">CVS repository</a>.
 <P>
 These pages are updated as people contribute decoder information to JMRI.
-<A HREF="../../community/index.html">Many people</a>
-have contributed to this effort, and we thank 
-<A HREF="../../community/index.html">all of them</a>.
+<A HREF="../../help/en/Acknowledgements.shtml">Many people</a>
+have worked on this, and we thank 
+<A HREF="../../help/en/Acknowledgements.shtml">all of them</a>.
+If you find this information useful, we encourage you to 
+<a href="http://jmri.sf.net/donations.shtml">donate to support JMRI</a>.
 
 <HR>
-	<p>Copyright &copy; 1997 - 2007 JMRI Community. 
+	<p>Copyright &copy; 1997 - 2008 JMRI Community. 
 	<P>JMRI, DecoderPro, PanelPro, DispatcherPro and associated logos are our trademarks.
 	<P><A href="/Copyright.html">Additional information on copyright, trademarks and licenses is linked here.</a></p>
 <P>Site hosted by: <BR>
