--- a/help/en/index.html
+++ b/help/en/index.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/1999/REC-html401-19991224/loose.dtd">
-<!-- $Id: index.html,v 1.2 2007-03-18 22:05:56 jacobsen Exp $ -->
+<!-- $Id: index.html,v 1.3 2008-01-13 19:06:45 jacobsen Exp $ -->
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -28,6 +28,12 @@ The section to the left gives you three types of access to JMRI's help.
 
 <h2>Further information</h2>
 
+The main JMRI web page 
+<a href="http://jmri.sf.net">http://jmri.sourceforge.net</a>
+is a good place to start for information about current status, updates, etc.
+(Depending on your computer, you might have to copy that link to 
+your web browser to be able to see external sites properly)
+<p>
 The <A href="http://lists.sourceforge.net/lists/listinfo/jmri-announce">jmri-announce</a> 
 mailing list carries announcements of new versions, major changes, etc.  
 This list is intended to be very low traffic; discussions, etc, should take place elsewhere.
@@ -40,7 +46,7 @@ help, or suggest some improvement, that discussion group is a good place.  You c
 subscribe, browse posts, etc, at 
 <a href="http://groups.yahoo.com/group/jmriusers/">http://groups.yahoo.com/group/jmriusers/</A>.<P>
 
-Our <A HREF="http://jmri.sf.net/Technical/index.html">technical web pages</A> are still being written.
+Our <A HREF="http://jmri.sf.net/help/en/html/doc/Technical/index.shtml">technical web pages</A> are still being written.
 This is still an early stage, and we're critically short of documentation.  
 But if you're interested
 in working with the code, we'd love to help you get started via email, etc.
