--- a/help/en/index.html
+++ b/help/en/index.html
@@ -1,5 +1,5 @@
 <!doctype html public "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/1999/REC-html401-19991224/loose.dtd">
-<!-- $Id: index.html,v 1.3 2008-01-13 19:06:45 jacobsen Exp $ -->
+<!-- $Id: index.html,v 1.4 2008-01-15 06:26:37 jacobsen Exp $ -->
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -14,7 +14,7 @@ This is the top-level JMRI help page.
 
 <P>
 The 
-<A HREF="Acknowledgements.html">acknowledgements page</a>
+<A HREF="Acknowledgements.shtml">acknowledgements page</a>
 shows that a lot of people have been able to contribute.
 
 <h2>Using The Help System</h2>
