--- a/jmri/package.html
+++ b/jmri/package.html
@@ -20,7 +20,7 @@ layout management concepts.
 For overviews, tutorials, examples, guides, and tool documentation, please see:
 <ul>
   <li><a href="http://jmri.sourceforge.net/">JMRI project overview page</a>
-  <li><a href="http://jmri.sourceforge.net/doc/Technical/">JMRI project technical info</a>
+  <li><a href="http://jmri.sourceforge.net/help/en/html/doc/Technical/index.shtml">JMRI project technical info</a>
 </ul>
 
 <!-- Put @see and @since tags down here. -->
