--- a/jmri/configurexml/package.html
+++ b/jmri/configurexml/package.html
@@ -94,7 +94,7 @@ that prerequisites are present during a load:
 For overviews, tutorials, examples, guides, and tool documentation, please see:
 <ul>
   <li><a href="http://jmri.sourceforge.net/">JMRI project overview page</a>
-  <li><a href="http://jmri.sourceforge.net/Technical">JMRI project technical info</a>
+  <li><a href="http://jmri.sourceforge.net/help/en/html/doc/Technical/index.shtml">JMRI project technical info</a>
 </ul>
 
 <!-- Put @see and @since tags down here. -->
