--- a/jmri/jmrix/rps/package.html
+++ b/jmri/jmrix/rps/package.html
@@ -25,8 +25,32 @@ several layers of information:
 </UL>
 
 <P>
-Note that it's the Display <em>window</em>
-that currently does the processing; there's no behind the scenes operation yet.
+
+There are several pieces that do the behind the scene operation.
+
+<dl>
+<dt>Distributor<dd>There's exactly one of these. It's basic 
+function is to handle all the computations.  These include:
+    <ol>
+    <li>Hold the alignment and control information
+    <li>Receive Readings
+    <li>Distribute the Readings to anybody interested
+    <li>Compute Measurements from them
+    <li>Distribute the Measurements to whoever is interested
+    </ol>
+<dt>ControlPanel<dd>There can be at most one of these, which can
+    manually update the alignment and control information. 
+<dt>Monitor<dd>Shows the Readings and Measurements as they are produced.
+</dl>
+
+<h2>Limitations</h2>
+
+<ol>
+<li>This provides only one computation at a time (through the Distributor),
+    which is a bit of pain when doing comparative work.
+<li>The alignment contants are stored in a fixed file location in the
+    JMRI preferences directory.
+</ol>
 
 <h2>Related Documentation</h2>
 
