--- a/jmri/jmrix/rps/package.html
+++ b/jmri/jmrix/rps/package.html
@@ -41,6 +41,8 @@ function is to handle all the computations.  These include:
 <dt>ControlPanel<dd>There can be at most one of these, which can
     manually update the alignment and control information. 
 <dt>Monitor<dd>Shows the Readings and Measurements as they are produced.
+<dt>SerialAdapter<dd>Connect (as configured) to a serial port
+and create Readings for the Distributor
 </dl>
 
 <h2>Limitations</h2>
