--- a/jmri/jmrix/rps/swing/debugger/package.html
+++ b/jmri/jmrix/rps/swing/debugger/package.html
@@ -12,14 +12,19 @@
 </head>
 <body bgcolor="white">
 
-Contains Swing-dependent RPS tools.
+Provides a GUI for various RPS debugging activities.
 
+<P>
+This is particularly intended for debugging & development use.
+
+<h2>Related Documentation</h2>
+
+For overviews, tutorials, examples, guides, and tool documentation, please see:
 <ul>
-<li>Control Panel - runs operations
+  <li>
 </ul>
 
 <!-- Put @see and @since tags down here. -->
-@since 2.1.5
 
 </body>
 </html>
