--- a/jmri/jmrit/catalog/package.html
+++ b/jmri/jmrit/catalog/package.html
@@ -12,9 +12,18 @@
 </head>
 <body bgcolor="white">
 
-Provides a tree-based catalog for browsing.  First case 
-will be a tree of icons from the resources part of the jmri.jar
-file.
+Provides a tree-based catalog for browsing.  
+<p>
+The tree has two roots:
+<dl>
+<dt>resources<dd>Refers to files below the resources/icons directory in the
+program directory
+<dt>files<dd>Refers to files below the resources directory in the preferences
+directory
+</dl>
+
+<p>
+
 
 <!-- Put @see and @since tags down here. -->
 
